Modified paper structure + a few computations

--- a/backward_disentangling.tex
+++ b/backward_disentangling.tex
@@ -812,7 +812,7 @@ $$
 \left|\frac{\postmod{0} \uk{0, n - 1}^\theta \addf[n]{k}}{\postmod{0} \uk{0, n - 1}^\theta \1_{}} - \frac{\phi^\theta_0\uk{0, n - 1}^\theta \addf[n]{k}}{\phi^\theta_0\uk{0, n - 1}^\theta \1_{}}\right|\leqslant 2c_0(\theta,\varphi)\frac{\sigma_+}{\sigma_-}\|\addf[n]{k}\|_\infty\eqsp.
 $$
 
-\paragraph{Error term at time $m>0$ in \eqref{eq:error:decomp}. } For all bounded measurable function $h$ and $m \in \intvect{1}{k}$, define the kernel  
+\paragraph{Error term at time $m>0$ in \eqref{eq:error:decomp}. } Define the kernel  
 \begin{equation} \label{eq:def:retrokmod:joint}
     \tilde{\mathcal{L}}^{\varphi,\theta}_{m, n}(x'_{m-1},x_m', \rmd x_{0:n}) \eqdef \delta_{x'_{m-1}}(\rmd x_{m-1})\delta_{x_m'}(\rmd x_m) \, \tstatmod{m-1}(x_{m-1}, \rmd x_{0:m - 2}) \prod_{\ell = m}^{n - 1} \uk{\ell,\theta}(x_\ell, \rmd x_{\ell + 1}), 
 \end{equation}
