Modified paper structure + a few computations

--- a/backward_disentangling.tex
+++ b/backward_disentangling.tex
@@ -426,7 +426,7 @@ $$
 $$ 
 and 
 $$
-    \udlow \leq  q_{\varphi,k}(x_{k+1}, x_{k}), \quad q_{\varphi,k}(x_{k+1}, x_{k}) \leq \udup. 
+    \udlow \leq  q_{\varphi,k}(x_{k+1}, x_{k}) \leq \udup. 
 $$ 
 \end{hypH}
 %Under these assumptions, define the mixing rate 
