new figures with averaging the graphs

--- a/backward_disentangling.tex
+++ b/backward_disentangling.tex
@@ -487,13 +487,13 @@ where $ \mathrm{Tr}$ is the Trace operator and $\propto$ means up to a multiplic
 \begin{figure}[h]
     \centering
     \includegraphics[width=10cm]{additive_smoothing_errors.png}
-    \caption{Computation of $\big| \postmod{0:n} h_{0:n} -  \post{0:n}^{\parvec} h_{0:n} \big|$ for growing values of $n$}
+    \caption{Computation of $\big| \postmod{0:n} h_{0:n} -  \post{0:n}^{\parvec} h_{0:n} \big|$ for growing values of $n$ when both $p_\theta$ and $q_\varphi$ are linear gaussian HMMs}
 \end{figure}
 
 \begin{figure}[h]
     \centering
     \includegraphics[width=10cm]{marginal_smoothing_errors.png}
-    \caption{Computation of $\big| \postmod{0:n} \tilde{h}_{k} -  \post{0:n}^{\parvec} \tilde{h}_{k} \big|$ for different $k$}
+    \caption{Computation of $\big| \postmod{0:n} \tilde{h}_{k} -  \post{0:n}^{\parvec} \tilde{h}_{k} \big|$ for different $k$ when both $p_\theta$ and $q_\varphi$ are linear gaussian HMMs}
 \end{figure}
 
 \subsection{Noisy linear ICA}
